// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate a basic model 1`] = `
"import type { CombinedInstructions, Expression } from "blade-compiler";
import type { ReducedFunction, ResultRecord } from "blade/types";
import type { Account, Accounts } from "blade/types";
type AccountFieldSlug = "id" | "ronin.createdAt" | "ronin.createdBy" | "ronin.updatedAt" | "ronin.updatedBy" | "name" | "email";
export type { Account, Accounts };
declare module "blade/types" {
    export type Account = ResultRecord & {
        email: string;
        name: string;
    };
    export type Accounts = Array<Account> & {
        moreBefore?: string;
        moreAfter?: string;
    };
}
declare module "blade/server/hooks" {
    declare const use: {
        /** Get a single account record */
        account: ReducedFunction & {
            <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): T;
            after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => T);
            before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => T);
            including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => T);
            limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => T);
            orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                ascending?: Array<Expression | AccountFieldSlug>;
                descending?: Array<Expression | AccountFieldSlug>;
            }, options?: Record<string, unknown>) => T) & {
                ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
                descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
            };
            selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => T);
            using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
            with: ReducedFunction & {
                <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): T;
                id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => T;
                ronin: ReducedFunction & {
                    createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => T;
                    createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => T;
                    updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => T;
                    updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => T;
                };
                name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => T;
                email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => T;
            };
        };
        /** Get multiple account records */
        accounts: ReducedFunction & {
            <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): T;
            after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => T);
            before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => T);
            including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => T);
            limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => T);
            orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                ascending?: Array<Expression | AccountFieldSlug>;
                descending?: Array<Expression | AccountFieldSlug>;
            }, options?: Record<string, unknown>) => T) & {
                ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
                descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
            };
            selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => T);
            using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
            with: ReducedFunction & {
                <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): T;
                id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => T;
                ronin: ReducedFunction & {
                    createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => T;
                    createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => T;
                    updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => T;
                    updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => T;
                };
                name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => T;
                email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => T;
            };
        };
    };
}
declare module "blade/client/hooks" {
    declare const useMutation: () => {
        add: {
            /** Add a single account record */
            account: ReducedFunction & {
                <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
            /** Add multiple account records */
            accounts: ReducedFunction & {
                <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
        };
        remove: {
            /** Remove a single account record */
            account: ReducedFunction & {
                <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
            /** Remove multiple account records */
            accounts: ReducedFunction & {
                <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
        };
        set: {
            /** Set a single account record */
            account: ReducedFunction & {
                <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
            /** Set multiple account records */
            accounts: ReducedFunction & {
                <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                to: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["to"], options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
        };
    };
}
"
`;

exports[`generate a basic model with blob field 1`] = `
"import type { CombinedInstructions, Expression } from "blade-compiler";
import type { ReducedFunction, ResultRecord } from "blade/types";
import type { StoredObject } from "blade-compiler";
import type { Account, Accounts } from "blade/types";
type AccountFieldSlug = "id" | "ronin.createdAt" | "ronin.createdBy" | "ronin.updatedAt" | "ronin.updatedBy" | "name" | "email" | "image";
export type { Account, Accounts };
declare module "blade/types" {
    export type Account = ResultRecord & {
        email: string;
        image: StoredObject;
        name: string;
    };
    export type Accounts = Array<Account> & {
        moreBefore?: string;
        moreAfter?: string;
    };
}
declare module "blade/server/hooks" {
    declare const use: {
        /** Get a single account record */
        account: ReducedFunction & {
            <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): T;
            after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => T);
            before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => T);
            including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => T);
            limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => T);
            orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                ascending?: Array<Expression | AccountFieldSlug>;
                descending?: Array<Expression | AccountFieldSlug>;
            }, options?: Record<string, unknown>) => T) & {
                ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
                descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
            };
            selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => T);
            using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
            with: ReducedFunction & {
                <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): T;
                id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => T;
                ronin: ReducedFunction & {
                    createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => T;
                    createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => T;
                    updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => T;
                    updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => T;
                };
                name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => T;
                email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => T;
                image: <T = Account | null>(image: Account["image"], options?: Record<string, unknown>) => T;
            };
        };
        /** Get multiple account records */
        accounts: ReducedFunction & {
            <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): T;
            after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => T);
            before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => T);
            including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => T);
            limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => T);
            orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                ascending?: Array<Expression | AccountFieldSlug>;
                descending?: Array<Expression | AccountFieldSlug>;
            }, options?: Record<string, unknown>) => T) & {
                ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
                descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
            };
            selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => T);
            using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
            with: ReducedFunction & {
                <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): T;
                id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => T;
                ronin: ReducedFunction & {
                    createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => T;
                    createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => T;
                    updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => T;
                    updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => T;
                };
                name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => T;
                email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => T;
                image: <T = Accounts>(image: Account["image"], options?: Record<string, unknown>) => T;
            };
        };
    };
}
declare module "blade/client/hooks" {
    declare const useMutation: () => {
        add: {
            /** Add a single account record */
            account: ReducedFunction & {
                <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                    image: <T = Account | null>(image: Account["image"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
            /** Add multiple account records */
            accounts: ReducedFunction & {
                <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                    image: <T = Accounts>(image: Account["image"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
        };
        remove: {
            /** Remove a single account record */
            account: ReducedFunction & {
                <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                    image: <T = Account | null>(image: Account["image"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
            /** Remove multiple account records */
            accounts: ReducedFunction & {
                <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                    image: <T = Accounts>(image: Account["image"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
        };
        set: {
            /** Set a single account record */
            account: ReducedFunction & {
                <T = Account | null>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Account | null>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Account | null>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Account | null>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Account | null>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Account | null>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Account | null>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Account | null>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Account | null>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Account | null>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Account | null>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Account | null>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Account | null>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                    image: <T = Account | null>(image: Account["image"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
            /** Set multiple account records */
            accounts: ReducedFunction & {
                <T = Accounts>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): Promise<T>;
                after: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["after"], options?: Record<string, unknown>) => Promise<T>);
                before: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["before"], options?: Record<string, unknown>) => Promise<T>);
                including: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => Promise<T>);
                limitedTo: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["limitedTo"], options?: Record<string, unknown>) => Promise<T>);
                orderedBy: ReducedFunction & (<T = Accounts>(instructions: {
                    ascending?: Array<Expression | AccountFieldSlug>;
                    descending?: Array<Expression | AccountFieldSlug>;
                }, options?: Record<string, unknown>) => Promise<T>) & {
                    ascending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                    descending: <T = Accounts>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>;
                };
                selecting: ReducedFunction & (<T = Accounts>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => Promise<T>);
                to: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["to"], options?: Record<string, unknown>) => Promise<T>);
                using: ReducedFunction & (<T = Accounts>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
                with: ReducedFunction & {
                    <T = Accounts>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): Promise<T>;
                    id: <T = Accounts>(value: ResultRecord["id"], options?: Record<string, unknown>) => Promise<T>;
                    ronin: ReducedFunction & {
                        createdAt: <T = Accounts>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => Promise<T>;
                        createdBy: <T = Accounts>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => Promise<T>;
                        updatedAt: <T = Accounts>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => Promise<T>;
                        updatedBy: <T = Accounts>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => Promise<T>;
                    };
                    name: <T = Accounts>(name: Account["name"], options?: Record<string, unknown>) => Promise<T>;
                    email: <T = Accounts>(email: Account["email"], options?: Record<string, unknown>) => Promise<T>;
                    image: <T = Accounts>(image: Account["image"], options?: Record<string, unknown>) => Promise<T>;
                };
            };
        };
    };
}
"
`;

exports[`generate with no models 1`] = `
"import type { CombinedInstructions, Expression } from "blade-compiler";
import type { ReducedFunction, ResultRecord } from "blade/types";
import type {} from "blade/types";
export type {};
declare module "blade/types" { }
declare module "blade/server/hooks" {
    declare const use: {};
}
declare module "blade/client/hooks" {
    declare const useMutation: () => {
        add: {};
        remove: {};
        set: {};
    };
}
"
`;
